--- a/Develop/templates/engineer.html
+++ b/Develop/templates/engineer.html
@@ -1,12 +1,12 @@
 <!-- Engineer Template with template literals -->
 
-<div class="card employee-card">
-    <div class="card-header">
+<div class="shadow card employee-card mt-5">
+    <div class="card-header text-white bg-primary ml-0">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
     </div>
-    <div class="card-body">
-        <ul class="list-group">
+    <div class="card-body bg-light mt-3 mb-3">
+        <ul class="list-group list-group-flush">
             <li class="list-group-item">ID: {{ id }}</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
