--- a/Develop/templates/intern.html
+++ b/Develop/templates/intern.html
@@ -1,10 +1,10 @@
-<div class="card employee-card">
-    <div class="card-header">
+<div class="shadow card employee-card mt-5">
+    <div class="card-header text-white bg-primary ml-0">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
     </div>
-    <div class="card-body">
-        <ul class="list-group">
+    <div class="card-body bg-light mt-3 mb-3">
+        <ul class="list-group list-group-flush">
             <li class="list-group-item">ID: {{ id }}</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
             <li class="list-group-item">School: {{ school }}</li>
