--- a/Develop/templates/main.html
+++ b/Develop/templates/main.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row row-cols-3 my-5">
             <div class="team-area col-12 d-flex justify-content-center">
                 {{ team }}
             </div>
