--- a/Develop/templates/intern.html
+++ b/Develop/templates/intern.html
@@ -1,13 +1,15 @@
-<div class="shadow card employee-card mt-5">
-    <div class="card-header text-white bg-primary ml-0">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
-    </div>
-    <div class="card-body bg-light mt-3 mb-3">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">School: {{ school }}</li>
-        </ul>
+<div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">{{ name }}</h2>
+            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;{{ role }}</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: {{ id }}</li>
+                <li class="list-group-item">Email: {{ email }}</li>
+                <li class="list-group-item">School: {{ school }}</li>
+            </ul>
+        </div>
     </div>
 </div>
