--- a/Develop/templates/engineer.html
+++ b/Develop/templates/engineer.html
@@ -6,9 +6,9 @@
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: {{ id }}</li>
-                <li class="list-group-item">Email: {{ email }}</li>
-                <li class="list-group-item">GitHub: {{ github }}</li>
+                <li class="list-group-item"><b>ID:</b> {{ id }}</li>
+                <li class="list-group-item"><b>Email:</b> {{ email }}</li>
+                <li class="list-group-item"><b>GitHub:</b> {{ github }}</li>
             </ul>
         </div>
     </div>
