--- a/Develop/templates/intern.html
+++ b/Develop/templates/intern.html
@@ -7,7 +7,7 @@
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> {{ id }}</li>
-                <li class="list-group-item"><b>Email:</b> {{ email }}</li>
+                <li class="list-group-item"><b>Email:</b> <a href="mailto:{{ email }}">{{ email }}</a></li>
                 <li class="list-group-item"><b>School:</b> {{ school }}</li>
             </ul>
         </div>
